pamc/src/tests/sample_code/should_fail/type_check/illegal_callee/non_nullary_adt_instance.ph
type U {
    .U: U,
}

type Bar {
    .B(x: U): Bar,
}

let foo = Bar.B(U.U)(U.U);
